--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">-->
         <meta name="description" content="电助！凉子，看到了吗！">
         <title>「日常」</title>
         <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="js-main"></div>
-        <script src="bundle@8b51a159a6498807fd5b.js"></script>
+        <script src="bundle@f03d03a04f13732360f3.js"></script>
     </body>
 </html>
