--- a/youku.html
+++ b/youku.html
@@ -5,12 +5,21 @@
     <title></title>
 </head>
 <body>
+    <div>
     <a href="youku://play?spm=a2hcm.20010061.m_213785.5~5!2~5~5~5~5~5~A&ishttps=1&action=play&source=limitedplaybutton&pagetype=playerPage&title=%E5%8D%9A%E4%BA%BA%E4%BC%A0%20%E7%81%AB%E5%BD%B1%E5%BF%8D%E8%80%85%E6%96%B0%E6%97%B6%E4%BB%A3&vid=XMzYzMzQ0MDY5Mg&ua=Mozilla%2F5.0%20(Linux%3B%20Android%206.0%3B%20Nexus%205%20Build%2FMRA58N)%20AppleWebKit%2F537.36%20(KHTML%2C%20like%20Gecko)%20Chrome%2F66.0.3359.181%20Mobile%20Safari%2F537.36&ccts=1527839753750&cookieid=1462260716383CUv%7Cus24kj">
         打开优酷
     </a>
+    </div>
+    <div>
     <a href="cntvcbox://app.cntv.cn/?guid=e75fbb3fb334dbf889784528b6558983&title=%E7%96%AF%E8%B5%B7%E6%9D%A5%E7%9B%9F%E5%8F%8B%E9%83%BD%E7%A0%8D %E7%89%B9%E6%9C%97%E6%99%AE%E5%8A%A0%E7%A8%8E%E5%90%8E%E5%BC%95%E5%8F%91%E7%9B%9F%E5%8F%8B%E9%9B%86%E4%BD%93%E5%8F%8D%E5%BC%B9%EF%BC%9A%E4%BA%88%E4%BB%A5%E5%8F%8D%E5%87%BB">
         打开央视影音
     </a>
+    </div>
+    <div>
+    <a href="cntvcbox://app.cntv.cn/?vtype=8&channelid=cctv1">
+        打开直播
+    </a>
+    </div>
 </body>
 </html>
 
