--- a/youku.html
+++ b/youku.html
@@ -17,7 +17,10 @@
     </div>
     <div>
     <a href="cntvcbox://app.cntv.cn/?vtype=8&channelid=cctv1">
-        打开直播
+        打开cctv1直播
+    </a>
+    <a href="cntvcbox://app.cntv.cn/?vtype=8&channelid=cctv2">
+        打开cctv2直播
     </a>
     </div>
 </body>
