--- a/youku.html
+++ b/youku.html
@@ -19,7 +19,7 @@
     <a href="cntvcbox://app.cntv.cn/?vtype=8&channelid=cctv1">
         打开cctv1直播
     </a>
-    <a href="cntvcbox://app.cntv.cn/?guid=cctv2&vtype=8&channelid=cctv2">
+    <a href="cntvcbox://app.cntv.cn/?guid=e75fbb3fb334dbf889784528b6558983&vtype=8&channelid=cctv2">
         打开cctv2直播
     </a>
     </div>
