--- a/youku.html
+++ b/youku.html
@@ -23,6 +23,9 @@
         打开cctv2直播
     </a>
     </div>
+    <a href="cntvcbox://app.cntv.cn/?guid=e75fbb3fb334dbf889784528b6558983&title=hello">
+        test
+    </a>
 </body>
 </html>
 
